--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -22,9 +22,10 @@ ja:
       edit: 'この%{name}を編集'
       back: '%{name}の一覧に戻る'
       destroy: 'この%{name}を消去'
-      title_index: '%{name}の一覧'
-      title_new: '%{name}の作成'
-      title_edit: '%{name}の編集'
+      title:
+        index: '%{name}の一覧'
+        new: '%{name}の作成'
+        edit: '%{name}の編集'
   date:
     abbr_day_names:
     - 日
