--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,9 @@ en:
         index: '%{name}'
         new: 'New %{name}'
         edit: 'Editing %{name}'
+      locale:
+        en: 'English'
+        ja: 'Japanese'
   date:
     abbr_day_names:
     - Sun
