--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -3,6 +3,8 @@ ja:
     models:
       book: 本
       user: ユーザ
+      report: レポート
+      comment: コメント
 
     attributes:
       book:
@@ -16,3 +18,10 @@ ja:
         address: 住所
         self_introduction: 自己紹介文
         avatar: ユーザ画像
+      report:
+        date: 日付
+        title: タイトル
+        body: 内容
+      comment:
+        comment: コメント
+
