--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -196,6 +196,7 @@ ja:
       validation_error: "%{errors}があるため、この%{name}は保存できませんでした"
       title_show: "%{name}の詳細"
       sign_out: ログアウト
+      mention_from: "この%{name}は以下の%{name}から言及されています"
     pagination:
       first: '« 最初'
       last: '最後 »'
