--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -196,7 +196,9 @@ ja:
       validation_error: "%{errors}があるため、この%{name}は保存できませんでした"
       title_show: "%{name}の詳細"
       sign_out: ログアウト
-      mention_from: "この%{name}は以下の%{name}から言及されています"
+  reports:
+    show:
+      mention_from: "この日報は以下の日報から言及されています"
     pagination:
       first: '« 最初'
       last: '最後 »'
